--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -1,172 +1,296 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="pt-br">
 
 <head>
-    <meta charset="utf-8" />
-    <title>O VRawr</title>
+	<title>VRawr - Início</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body>
-    <center><img src="img/VRawr-logo.png" id="logo"></center>
+<body class="is-preload">
 
-    <center>
-        <h1 id="menu_principal">Menu principal</h1>
+	<!-- Header -->
+	<header id="header">
+		<a class="logo" href="index.html">VRawr</a>
+		<nav>
+			<a href="#menu">Menu</a>
+		</nav>
+	</header>
 
-        <a href="#sobre_empresa">Sobre nós</a><br>
-        <a href="#sobre_o_treinamento">Sobre o treinamento</a><br>
-        <a href="cursos.html">Nossos cursos</a><br>
-        <a href="#pq_usar_framework">Por que usar o framework</a><br>
-        <a href="#tipos_treinamento">Os tipos de treinamento</a><br>
-        <a href="#niveis_aprendizado">Os níveis de aprendizado</a><br>
-        <a href="#exemplos_empresas">Exemplos de empresas que usam o VRaptor</a><br>
-        <a href="#comentarios_curso">Comentários sobre o curso</a><br>
-    </center>
+	<!-- Nav -->
+	<nav id="menu">
+		<ul class="links">
+			<li><a href="index.html">Página Principal</a></li>
+			<li><a href="artigos.html">Artigos</a></li>
+			<li><a href="cursos.html">Nossos cursos e eventos</a></li>
+			<li><a href="Contato.html">Contato</a></li>
+			<li><a href="elements.html">Elementos de página</a></li>
+			<li><a href="generic.html">Página Genérica</a></li>
+		</ul>
+	</nav>
 
-    <hr>
-    <center>
-        <h2 id="sobre_empresa">Sobre a empresa</h2>
-    </center>
-    <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a Vrawr para a criação de um framework para os seus
-        produtos,
-        processos e sistemas.
-        Além disso, utilizamos o nosso conhecimento para ampliar o conhecimento do programador.
-        A nossa empresa oferece boas maneiras de programação, assim como um excelente café bem moído
-        na hora com aquela Cream Cracker que todo mundo respeita.
-        <br><br>O nosso curso te ensina você a desenvolver o VRaptor de uma maneira eficiente. De verdade.</p>
-    <center>
-        <h3>Nossa missão</h3>
-    </center>
-    <p>Transformar os sonhos dos nossos alunos em realidade, por meio da educação, formação profissional e orientação ao
-        mercado de trabalho.</p>
-    <center>
-        <h3>Nossa visão</h3>
-    </center>
-    <p>Realizar sonhos e cultivar o conhecimento por meio da formação profissional, agregando valores perceptíveis para
-        o
-        país, os clientes, acionistas e parceiros.</p>
-    <center>
-        <h3>Nossos valores</h3>
-    </center>
-    <ul>
-        <li><b>Realização:</b> Concretizar projetos, procurando fazê-los da melhor maneira possível.</li>
-        <li><b>Profissionalismo:</b> Atuar com eficácia, usando de discernimento e coerência com empatia em todas as
-            atitudes.</li>
-        <li><b>Iniciativa:</b> Ser pró-ativo, avaliar os problemas que possam surgir e resolvê-los com criatividade e
-            conhecimento.</li>
-        <li>
-            <b>Justiça:</b> Disponibilizar oportunidades similares a todos.
-        </li>
-    </ul>
-    <hr>
+	<!-- Banner -->
+	<section id="banner">
+		<div class="inner">
+			<h1>VRawr</h1>
+			<p>A melhor escolha para aprender VRaptor, um framework<br />
+				<a href="https://pt.wikipedia.org/wiki/MVC">MVC</a> para web focado no desenvolvimento ágil.</p>
+		</div>
+		<video autoplay loop muted playsinline src="images/banner.mp4"></video>
+	</section>
 
-    <center>
-        <h2 id="sobre_o_treinamento">Sobre o nosso treinamento especializado</h2>
-    </center>
-    <p>O treinamento é baseado no framework MVC web para desenvolvimento ágil com Java. O treinamento focará em como
-        usar a ferramenta de vez e como ela será útil no dia a dia.
-        <br>
-        <hr>
+	<!-- Highlights -->
+	<section class="wrapper">
+		<div class="inner">
+			<header class="special">
+				<h2>Nossa Missão</h2>
+				<p>Transformar os sonhos dos nossos alunos em realidade, por meio da educação, formação profissional e
+					orientação ao
+					mercado de trabalho.</p>
+			</header>
+			<hr />
 
-        <center>
-            <h2 id="pq_usar_framework">Por que eu usaria esse framework?</h2>
-        </center>
-        Esse framework diminui drasticamente o tempo de trabalho que seria perdido com o código repetitivo. Além disso,
-        o
-        <b>certificado</b> de nosso curso, servirá <em>amplamente</em> para a carreira de programador, assim como
-        agregará seu
-        conhecimento, através dos métodos ágeis disponibilizados pelo framework e pelo curso VRawr.
-        <br>
-        <br>
-        <hr>
+			<!-- Highlights -->
+			<div class="inner">
+				<header class="special">
+					<h2>Nossos artigos</h2>
+					<section>
+						<div class="content">
+							<header>
+								<a href="artigos.html#sobreoVRaptor" class="icon fa-edit"><span class="label">Artigo
+										01</span></a>
+								<h3>Sobre o VRaptor</h3>
+							</header>
+							<p>Clique no ícone acima e acesse nossos artigo sobre o VRaptor.</p>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<a href="artigos.html#oqueeVRaptor" class="icon fa-question"><span class="label">Artigo
+										02</span></a>
+								<h3>O que é o VRaptor?</h3>
+							</header>
+							<p>Clique no ícone acima e acesse nossos artigo sobre o que é o VRaptor.</p>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<a href="artigos.html" class="icon fa-file"><span class="label">Mais
+										artigos</span></a>
+								<h3>Outros Artigos</h3>
+							</header>
+							<p>Clique no ícone acima e acesse nossos outros artigos.</p>
+						</div>
+					</section>
+				</header>
+				<hr />
 
-        <center>
-            <h2 id="tipos_treinamento">Tipos de treinamento</h2>
-        </center>
-        <center>
-            <h3>O treinamento se baseia nas seguintes formas: </h3>
-        </center>
-        <h4>Presencial</h4>
-        <p>O nosso curso presencial se baseia nos seguintes fatores:</p>
-        <ul>
-            <li>Lógica do framework</li>
-            <li>Utilização de blocos para ensinar de forma didática</li>
-            <li>Criação de problemas baseado nos assuntos dados</li>
-            <li>Resolução de problemas</li>
-        </ul>
-        <h4>Virtual</h4>
-        <p>O nosso curso EAD se baseia nos seguintes fatores:</p>
-        <ul>
-            <li>Flexibilidade</li>
-            <li>Mais econômico</li>
-            <li>Comodidade</li>
-        </ul>
-        <hr>
 
-        <center>
-            <h2 id="niveis_aprendizado">Tipos dos níveis de aprendizado:</h2>
-        </center>
-        <h3>Básico</h3>
-        <ul>
-            <li>O essencial da linguagem java;</li>
-            <li>Introdução ao VRaptor.</li>
-        </ul>
-        <h3>Intermediário</h3>
-        <ul>
-            <li>Orientação a objetos em java atrelado ao VRaptor;</li>
-            <li>Maior profundidade ao VRaptor, uso da plataforma por completo.</li>
-        </ul>
-        <h3>Avançado</h3>
-        <ul>
-            <li>Você é contratado para nossa empresa. Não podemos perder você!</li>
-        </ul>
-        <hr>
+				<div class="highlights">
+					<section>
+						<div class="content">
+							<header>
+								<a href="oquee.html" class="icon fa-clipboard"><span class="label">Icon</span></a>
+								<h3>Sobre o treinamento</h3>
+							</header>
+							<p>O treinamento focará em como usar a ferramenta de
+								vez e como ela será útil no dia a dia. <br>
+								Clique no ícone acima para saber mais sobre o treinamento.</p>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<a class="icon fa-question"><span class="label">Icon</span></a>
+								<h3>Por que eu usaria esse framework?</h3>
+							</header>
+							<p>Esse framework diminui drasticamente o tempo de trabalho que seria perdido com o
+								código
+								repetitivo.
+							</p>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<a href="TiposTreinamento.html" class="icon fa-book"><span class="label">Icon</span></a>
+								<h3>Tipos de treinamento</h3>
+							</header>
+							<p>Clique no ícone acima e descubra os tipos de treinamento de nosso curso.</p>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<a href="NiveisAprendizado.html" class="icon fa-line-chart"><span
+										class="label">Icon</span></a>
+								<h3>Tipos dos níveis de aprendizado</h3>
+							</header>
+							<p>Clique no ícone acima e descubra os níveis de aprendizado de nosso curso.</p>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<a class="icon fa-building"><span class="label">Icon</span></a>
+								<h3>Exemplos de empresas que usam o VRaptor</h3>
+							</header>
+							<p><a href="http://www.mamute.org/" target="_blank">MAMUTE</a><br>
+								<a href="https://www.guj.com.br/" target="_blank">GUJ</a><br>
+								<a href="https://www.wine.com.br/" target="_blank">Wine.com.br</a><br>
+								<a href="http://www.defferrari.com.br/" target="_blank">Grupo Defferrari</a><br>
+								<a href="https://www.locaweb.com.br/" target="_blank">Locaweb</a><br>
+								<a href="https://www.isobar.com/global/en/" target="_blank">Agênciaclick</a><br>
+							</p>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<a href="cursos.html" class="icon fa-laptop"><span class="label">Icon</span></a>
+								<h3>Nossos cursos com certificação e eventos</h3>
+							</header>
+							<p>Clique no ícone acima e descubra os cursos atuais com certificados e os futuros
+								eventos da
+								empresa.
+							</p>
+						</div>
+					</section>
+				</div>
+			</div>
+	</section>
+	</div>
 
-        <center>
-            <h2 id="exemplos_empresas">Exemplos de empresas que usam o VRaptor</h2>
-        </center>
-        <ul>
-            <li><a href="http://www.mamute.org/" target="_blank">MAMUTE</a></li>
-            <li><a href="https://www.guj.com.br/" target="_blank">GUJ</a></li>
-            <li><a href="https://www.wine.com.br/" target="_blank">Wine.com.br</a></li>
-            <li><a href="http://www.defferrari.com.br/" target="_blank">Grupo Defferrari</a></li>
-            <li><a href="https://www.locaweb.com.br/" target="_blank">Locaweb</a></li>
-            <li><a href="https://www.isobar.com/global/en/" target="_blank">Agênciaclick</a></li>
+	<!-- CTA -->
+	<section id="cta" class="wrapper">
+		<div class="inner">
+			<h2>Faça parte de nossos cursos</h2>
+			<p>Somos um dos principais precursores do VRaptor do Brasil e nos destacamos pela ousadia
+				planejada, pela busca incessante da excelência e pelo crescimento contínuo. Com uma
+				equipe de peso, temos o melhor curso de VRaptor como base do nosso negócio, superando até mesmo
+				vários cursos ofertados em universidades renomadas no mundo.</p>
+		</div>
+	</section>
 
-        </ul>
-        <hr>
+	<!-- Testimonials -->
+	<section class="wrapper">
+		<div class="inner">
+			<header class="special">
+				<h2>Comentários sobre o curso</h2>
+				<p>Aqui estão alguns dos muitos relatos de alunos que fizeram nosso curso e se sentem felizes
+					pelo
+					processo
+					que conseguiram com nosso treinamento especializado em VRaptor.</p>
+			</header>
+			<div class="testimonials">
+				<section>
+					<div class="content">
+						<blockquote>
+							<p>Antes eu nem sabia da existencia desse método, depois que aprendi na VRawr, nunca
+								mais
+								deixei de usar!</p>
+						</blockquote>
+						<div class="author">
+							<div class="image">
+								<img src="images/pic01.jpg" alt="" />
+							</div>
+							<p class="credit">- <strong>Valentina</strong> <span>Diretora executiva da
+									NASA.</span></p>
+						</div>
+					</div>
+				</section>
+				<section>
+					<div class="content">
+						<blockquote>
+							<p>Ótimo curso, consegui rapidamente ingressar no mercado após o curso! o VRawr
+								virou um
+								estilo de vida que irei passar para as futuras gerações.</p>
+						</blockquote>
+						<div class="author">
+							<div class="image">
+								<img src="images/pic03.jpg" alt="" />
+							</div>
+							<p class="credit">- <strong>José Fernando</strong> <span>Ex-morador de rua e chefe
+									executivo
+									da LATAM Airlines Brasil</span></p>
+						</div>
+					</div>
+				</section>
+				<section>
+					<div class="content">
+						<blockquote>
+							<p>Muito obrigado a todos da VRawr, que muito me ajudaram e foram cordiais mesmo com
+								os
+								obstáculos que encontrei durante o período devido a minha precária condição.</p>
+						</blockquote>
+						<div class="author">
+							<div class="image">
+								<img src="images/pic02.jpg" alt="" />
+							</div>
+							<p class="credit">- <strong>Monica Moreno</strong> <span>Estudante do MIT em
+									Computer
+									Science and Engineering</span></p>
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</section>
 
-        <center>
-            <h2 id="comentarios_curso">Comentários sobre o curso</h2>
-        </center>
-        <blockquote>
-            <p>(Enzo Gabriel, 13 anos. Engenheiro de software na SpaceX e Tesla Motors)
-                <br>Antes eu nem sabia da existencia desse método, depois que aprendi na VRawr,
-                nunca mais deixei de usar!</p>
-            <br>
-            <p>(Brasil Washington C.A. Júnior, 24 anos. Gari e programador front-end)
-                <br>Muito bom!! Curso Top!
-                <br>
-                Ótimo curso, consegui rapidamente ingressar no mercado após o curso!
-                Pode comprar sem medo! Melhorou bastante o meu conhecimento sobre VRaptor,
-                tanto é que virou um estilo de vida que irei passar para as futuras gerações.</p>
-            <br>
-            <p>(Jacinto A. R. Santos, 33 anos. Auto-didata e Ph.D em Educação Física pela UNICAMP)
-                <br>Material muito bom, totalemente diferente de outros cursos.
-                Estou abismado com tanto conhecimento, é tudo e mais um pouco do que eu esperava.
-                Muito potente o VRawr.</p>
-        </blockquote>
-    </p>
-    <hr>
-    <a href="oquee.html">Sobre a empresa</href>
-        <br>
-        <a href="Contato.html">Contato</a>
-        <br>
-        <a href="Localizacao.html">Localização</a>
-        <br>
-        <a href="DireitosReservados.html">Direitos Reservados</a>
-        <br>
-        <center><a href="#logo">Voltar ao topo</a></center>
-        </p>
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<div class="content">
+				<section>
+					<h3>Sobre nós</h3>
+					<p>Desde o dia 25/11/19, empresas de todo o mundo contam com a VRawr para a criação de um
+						framework
+						para os seus produtos, processos e sistemas. Além disso, utilizamos o nosso conhecimento
+						para
+						ampliar o conhecimento do programador.</p>
+				</section>
+				<section>
+					<h4>Categorias</h4>
+					<ul class="alt">
+						<li><a href="Contato.html">Contato</a></li>
+						<li><a href="Localização.html">Localização</a></li>
+						<li><a href="PoliticaPrivacidade.html">Política de Privacidade</a></li>
+						<li><a href="DireitosReservados.html">Direitos Reservados</a></li>
+					</ul>
+				</section>
+				<section>
+					<h4>Siga nossas redes sociais</h4>
+					<ul class="plain">
+						<li><a href="https://twitter.com/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+						<li><a href="https://www.facebook.com/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a>
+						</li>
+						<li><a href="https://instagram.com/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a>
+						</li>
+						<li><a href="https://github.com/ifal-riolargo/equipe15"><i
+									class="icon fa-github">&nbsp;</i>Github</a></li>
+					</ul>
+				</section>
+			</div>
+			<div class="copyright">
+				&copy; VRawr. IFAL Campus <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo">Rio
+					Largo</a>,
+				Todos os direitos<a href="DireitosReservados.html"> reservados</a>.
+			</div>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
