--- a/equipe15/oquee.html
+++ b/equipe15/oquee.html
@@ -1,73 +1,131 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="pt-br">
 
 <head>
+    <title>VRawr - Sobre o treinamento</title>
     <meta charset="utf-8" />
-    <title>Sobre a empresa</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body>
-    <hr>
-    <center>
-        <center><a href="index.html">
-            <img src="img/VRawr-logo.png" id="logo"></a></center>
+<body class="is-preload">
 
-        <a href="#sobre">Sobre a empresa</a><br>
-        <a href="#duracao_curso">Duração do curso</a><br>
-        <a href="#sobre_treinamento">Sobre o treinamento</a><br>
-        <a href="#info_relevante">Informações relevantes</a><br>
+    <!-- Header -->
+    <header id="header">
+        <a class="logo" href="index.html">VRawr</a>
+        <nav>
+            <a href="#menu">Menu</a>
+        </nav>
+    </header>
 
-        <h1 id="sobre">Sobre da empresa</h1>
-    </center>
+    <!-- Nav -->
+    <nav id="menu">
+        <ul class="links">
+            <li><a href="index.html">Página Principal</a></li>
+            <li><a href="artigos.html">Artigos</a></li>
+            <li><a href="cursos.html">Nossos cursos e eventos</a></li>
+            <li><a href="Contato.html">Contato</a></li>
+            <li><a href="elements.html">Elementos de página</a></li>
+            <li><a href="generic.html">Página Genérica</a></li>
+        </ul>
+    </nav>
 
-    <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a Vrawr para a criação de um framework para
-        os seus produtos, processos e sistemas. Além disso, utilizamos o nosso conhecimento para ampliar o
-        conhecimento do programador. A nossa empresa oferece boas maneiras de programação, assim como um
-        excelente café bem moído na hora com aquela Cream Cracker que todo mundo respeita.
-        <br><br>O nosso curso te ensina você a desenvolver o VRaptor de uma maneira eficiente. De verdade.</p>
-    <hr>
-    <center>
-        <h2 id="duracao_curso">Qual é a duração do curso?</h2>
-    </center>
-    <p>
-        O nosso curso de VRaptor tem a duração de 1 ano. Com a exigência da prática profissional,
-        o tempo máximo que o aluno pode levar para fazer o curso completo é de 2 anos.
-        <br>
-        Nosso curso lhe dá total apoio para que termine o curso e ingresse o mais rápido possível no
-        mercado de trabalho. Nós sabemos o quão ruim é quando não temos uma ajuda! Não se preocupe.
-        A VRawr está aqui para suprir tanto com conhecimento como também com estágios e empregos!
-    </p>
-    <hr>
-    <center>
-        <h2 id="sobre_treinamento">Sobre o treinamento</h2>
-    </center>
-    <p>
-        O curso da VRawr sobre o VRaptor tem duração média de 1 ano e é oferecida em grau de curso técnico
-        profissionalizante.
-        <br><br>
-        A estrutura curricular do curso apresenta algumas disciplinas das áreas de Programação e Engenharia de Software.
-        As disciplinas de VRaptor são teóricas e experimentais e o estudante aprende conceitos sobre
-        Introdução a Java, VRaptor incluso ao Java, Orientação à objetos com VRaptor,
-        Modelos de negócios e implementações na área de trabalho e desenvolvimento do zero ao avançado, entre outros.
-        <br><br>
-        Os alunos que optam pelo curso à distância (EAD) cursam as mesmas disciplinas, porém com mais tempo
-        e conforme ele deseja progredir.
-        <br>
-    </p>
-    <hr>
-    <center>
-        <h2 id="info_relevante">Informações relevantes</h2>
-    </center>
-    <p>
-        O curso oferece as seguintes linhas de serviços técnicos e tecnológicos:
-    </p>
-    <ul>
-        <li>consultoria em Gestão de Qualidade de Software, Produção e Gestão Integrada;</li>
-        <li>assistência Técnica e Melhoria de Softwares e Produtos;</li>
-        <li>pesquisa Aplicada em Parceria com Empresas.</li>
-    </ul>
-    <hr>
-    <center><a href="#logo">Voltar ao topo</a></center>
+    <!-- CTA -->
+    <section id="cta" class="wrapper">
+        <div class="inner">
+            <h2>Sobre o nosso treinamento</h2>
+            <p>Fique informado sobre como nosso curso funciona.</p>
+        </div>
+    </section>
+
+    <!-- Main -->
+    <section id="main" class="wrapper">
+        <div class="inner">
+            <div class="content">
+                <header>
+                    <h2>Qual é a duração do curso?</h2>
+                </header>
+                <p>O nosso curso de VRaptor tem a duração de 1 ano. Com a exigência da prática profissional, o tempo
+                    máximo que o aluno pode levar para fazer o curso completo é de 2 anos.
+                    Nosso curso lhe dá total apoio para que termine o curso e ingresse o mais rápido possível no mercado
+                    de trabalho. Nós sabemos o quão ruim é quando não temos uma ajuda! Não se preocupe. A VRawr está
+                    aqui para suprir tanto com conhecimento como também com estágios e empregos!</p>
+                <hr />
+                <h3>Sobre o treinamento</h3>
+                <p>O curso da VRawr sobre o VRaptor tem duração média de 1 ano e é oferecida em grau de curso técnico
+                    médio/superior profissionalizante.</p>
+                <p>A estrutura curricular do curso apresenta algumas disciplinas das áreas de Programação e Engenharia
+                    de Software. As disciplinas sobre o VRaptor são teóricas e experimentais e o estudante aprende
+                    conceitos
+                    sobre Introdução a Java, VRaptor incluso ao Java, Orientação à objetos com VRaptor, Modelos de
+                    negócios e implementações na área de trabalho e desenvolvimento do zero ao avançado, entre outros.
+                </p>
+                <p>
+                    Os alunos que optam pelo curso à distância (EAD) cursam as mesmas disciplinas que o aluno
+                    presencialmente,
+                    porém com mais liberdade e com a comodidade de estar estudando exclusivamente em casa! O que está
+                    esperando?! Tem algo melhor que isso?
+                </p>
+                <hr>
+                <h3>Informações relevantes</h3>
+                <p>
+                    O curso oferece as seguintes linhas de serviços técnicos e tecnológicos:
+                </p>
+                <ul>
+                    <li>consultoria em Gestão de Qualidade de Software, Produção e Gestão Integrada;</li>
+                    <li>assistência Técnica e Melhoria de Softwares e Produtos;</li>
+                    <li>pesquisa Aplicada em Parceria com Empresas.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <div class="content">
+                <section>
+                    <h3>Sobre nós</h3>
+                    <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a VRawr para a criação de um framework
+                        para os seus produtos, processos e sistemas. Além disso, utilizamos o nosso conhecimento para
+                        ampliar o conhecimento do programador.</p>
+                </section>
+                <section>
+                    <h4>Categorias</h4>
+                    <ul class="alt">
+                        <li><a href="Contato.html">Contato</a></li>
+                        <li><a href="Localização.html">Localização</a></li>
+                        <li><a href="PoliticaPrivacidade.html">Política de Privacidade</a></li>
+                        <li><a href="DireitosReservados.html">Direitos Reservados</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Siga nossas redes sociais</h4>
+                    <ul class="plain">
+                        <li><a href="https://twitter.com/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+                        <li><a href="https://www.facebook.com/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+                        <li><a href="https://instagram.com/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+                        <li><a href="https://github.com/ifal-riolargo/equipe15"><i
+                                    class="icon fa-github">&nbsp;</i>Github</a></li>
+                    </ul>
+                </section>
+            </div>
+            <div class="copyright">
+                &copy; VRawr. IFAL Campus <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo">Rio Largo</a>,
+                Todos os direitos<a href="DireitosReservados.html"> reservados</a>.
+            </div>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
