--- a/equipe15/Contato.html
+++ b/equipe15/Contato.html
@@ -1,36 +1,123 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="pt-br">
 
 <head>
+    <title>VRawr - Contato</title>
     <meta charset="utf-8" />
-    <title>Contato</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body>
-    <center><a href="index.html">
-        <img src="img/VRawr-logo.png" id="logo"></a></center>
-    <center>
-        <address>
-            Contato: (82) 2126-6290 <br>
-            <a href="mailto:portal@ifal.edu.br">Email</a><br>
-            Visite-nos em:
-            <br><iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7869.892490641686!2d-35.803065813994515!3d-9.513400063214393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbf3508b4ce144c3e!2sIFAL%20-%20Campus%20Rio%20Largo!5e0!3m2!1spt-BR!2sbr!4v1574898378650!5m2!1spt-BR!2sbr"
-                width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe><br>
-            <a href="index.html">VRawr</a>
-            <br>
-            Rio Largo, Alagoas
-            <br>
-            Brazil
-        </address>
-        <br>
-        <br>
-        
+<body class="is-preload">
 
-        <a href="#logo">Voltar ao topo</a>
+    <!-- Header -->
+    <header id="header">
+        <a class="logo" href="index.html">VRawr</a>
+        <nav>
+            <a href="#menu">Menu</a>
+        </nav>
+    </header>
 
-    
-    </center>
+    <!-- Nav -->
+    <nav id="menu">
+        <ul class="links">
+            <li><a href="index.html">Página Principal</a></li>
+            <li><a href="artigos.html">Artigos</a></li>
+            <li><a href="cursos.html">Nossos cursos e eventos</a></li>
+            <li><a href="Contato.html">Contato</a></li>
+            <li><a href="elements.html">Elementos de página</a></li>
+            <li><a href="generic.html">Página Genérica</a></li>
+        </ul>
+    </nav>
+
+    <!-- Heading -->
+    <section id="cta" class="wrapper">
+        <div class="inner">
+            <h2>Fale com a gente</h2>
+            <p>Nós estamos aqui por você! :)</p>
+        </div>
+    </section>
+
+    <!-- Highlights -->
+    <div class="highlights">
+        <section>
+            <div class="content">
+                <header>
+                    <a class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
+                    <h3>Localização</h3>
+                </header>
+                <p>
+                    R. Projetada, 1 - Lot. Vila Rica<br>
+                    Rio Largo - AL.<br>
+                    57100-000</p>
+            </div>
+        </section>
+        <section>
+            <div class="content">
+                <header>
+                    <a class="icon fa-phone"><span class="label">Icon</span></a>
+                    <h3>Contato</h3>
+                </header>
+                <p>(82) 2126-6290</p>
+            </div>
+        </section>
+        <section>
+            <div class="content">
+                <header>
+                    <a class="icon fa-inbox"><span class="label">Icon</span></a>
+                    <h3>E-mail</h3>
+                </header>
+                <p><a href="mailto:contato@vrawr.com.br">contato@vrawr.com.br</a></p>
+            </div>
+        </section>
+    </div>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <div class="content">
+                <section>
+                    <h3>Sobre nós</h3>
+                    <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a VRawr para a criação de um framework
+                        para os seus produtos, processos e sistemas. Além disso, utilizamos o nosso conhecimento para
+                        ampliar o conhecimento do programador.</p>
+                </section>
+                <section>
+                    <h4>Categorias</h4>
+                    <ul class="alt">
+                        <li><a href="Contato.html">Contato</a></li>
+                        <li><a href="Localização.html">Localização</a></li>
+                        <li><a href="PoliticaPrivacidade.html">Política de Privacidade</a></li>
+                        <li><a href="DireitosReservados.html">Direitos Reservados</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Siga nossas redes sociais</h4>
+                    <ul class="plain">
+                        <li><a href="https://twitter.com/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+                        <li><a href="https://www.facebook.com/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+                        <li><a href="https://instagram.com/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+                        <li><a href="https://github.com/ifal-riolargo/equipe15"><i
+                                    class="icon fa-github">&nbsp;</i>Github</a></li>
+                    </ul>
+                </section>
+            </div>
+            <div class="copyright">
+                &copy; VRawr. IFAL Campus <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo">Rio Largo</a>,
+                Todos os direitos<a href="DireitosReservados.html"> reservados</a>.
+            </div>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
