--- a/equipe15/DireitosReservados.html
+++ b/equipe15/DireitosReservados.html
@@ -1,33 +1,111 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="pt-br">
 
 <head>
+    <title>VRawr - Direitos reservados</title>
     <meta charset="utf-8" />
-    <title>Direitos Reservados</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body>
-    <center><a href="index.html">
-        <img src="img/VRawr-logo.png" id="logo"></a></center>
+<body class="is-preload">
 
-    <center><h2>Direitos Reservados</h2></center>
-    <p>
-        Copyright©2019-2019, VRawr Company. Todos os direitos reservados.
-        Todos os textos, imagens, gráficos, animações, vídeos, músicas, sons e outros materiais são
-        protegidos por direitos autorais e outros direitos de propriedade intelectual
-        pertencentes à VRawr Company, suas subsidiárias, afiliadas e licenciantes.
-    </p>
-    <p>
-        A VRawr Company é, também, proprietária dos direitos autorais de desenvolvimento,
-        seleção, coordenação, diagramação e disposição dos materiais neste site. É expressamente
-        vedada a cópia ou reprodução destes materiais para uso ou distribuição comercial,
-        a modificação destes materiais, sua inclusão em outros websites e o seu envio e publicação
-        em outros meios digitais e físicos, ou de qualquer outra forma dispor de tais materiais
-        sem a devida autorização, estando sujeito às responsabilidades e sanções legais.
-    </p>
+    <!-- Header -->
+    <header id="header">
+        <a class="logo" href="index.html">VRawr</a>
+        <nav>
+            <a href="#menu">Menu</a>
+        </nav>
+    </header>
 
-    <center><a href="#logo">Voltar ao topo</a></center>
+    <!-- Nav -->
+    <nav id="menu">
+        <ul class="links">
+            <li><a href="index.html">Página Principal</a></li>
+            <li><a href="artigos.html">Artigos</a></li>
+            <li><a href="cursos.html">Nossos cursos e eventos</a></li>
+            <li><a href="Contato.html">Contato</a></li>
+            <li><a href="elements.html">Elementos de página</a></li>
+            <li><a href="generic.html">Página Genérica</a></li>
+        </ul>
+    </nav>
+
+    <!-- CTA -->
+    <section id="cta" class="wrapper">
+        <div class="inner">
+            <h2>Direitos Reservados</h2>
+            <p>Sobre os direitos do site.</p>
+        </div>
+    </section>
+
+    <!-- Main -->
+    <section id="main" class="wrapper">
+        <div class="inner">
+            <div class="content">
+                <header>
+                    <h2>Sobre os direitos reservados</h2>
+                </header>
+                <p>&copy;2019-2019, VRawr Company. Todos os direitos reservados. Todos os textos, imagens, gráficos,
+                    animações, vídeos, músicas, sons e outros materiais são protegidos por direitos autorais e outros
+                    direitos de propriedade intelectual pertencentes à VRawr Company, suas subsidiárias, afiliadas e
+                    licenciantes.</p>
+                <p>A VRawr Company é, também, proprietária dos direitos autorais de desenvolvimento, seleção,
+                    coordenação, diagramação e disposição dos materiais neste site. É expressamente vedada a cópia ou
+                    reprodução destes materiais para uso ou distribuição comercial, a modificação destes materiais, sua
+                    inclusão em outros websites e o seu envio e publicação em outros meios digitais e físicos, ou de
+                    qualquer outra forma dispor de tais materiais sem a devida autorização, estando sujeito às
+                    responsabilidades e sanções legais.</p>
+                <hr />
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <div class="content">
+                <section>
+                    <h3>Sobre nós</h3>
+                    <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a VRawr para a criação de um framework
+                        para os seus produtos, processos e sistemas. Além disso, utilizamos o nosso conhecimento para
+                        ampliar o conhecimento do programador.</p>
+                </section>
+                <section>
+                    <h4>Categorias</h4>
+                    <ul class="alt">
+                        <li><a href="Contato.html">Contato</a></li>
+                        <li><a href="Localização.html">Localização</a></li>
+                        <li><a href="PoliticaPrivacidade.html">Política de Privacidade</a></li>
+                        <li><a href="DireitosReservados.html">Direitos Reservados</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Siga nossas redes sociais</h4>
+                    <ul class="plain">
+                        <li><a href="https://twitter.com/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+                        <li><a href="https://www.facebook.com/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+                        <li><a href="https://instagram.com/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+                        <li><a href="https://github.com/ifal-riolargo/equipe15"><i
+                                    class="icon fa-github">&nbsp;</i>Github</a></li>
+                    </ul>
+                </section>
+            </div>
+            <div class="copyright">
+                &copy; VRawr. IFAL Campus <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo">Rio Largo</a>,
+                Todos os direitos<a href="DireitosReservados.html"> reservados</a>.
+            </div>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
